# climasus4py

./: .gitignore  404.html  LICENSE  README.md  RELEASE_CHECKLIST.md  examples_climasus4py.ipynb  gen_ref_pages.py  index.html  mkdocs.yml  note_testes.ipynb  objects.inv  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml
assets/: climasus.css  climasus.js
benchmark/: BENCHMARK_REPORT.md  benchmark_pipeline.py
benchmark/results/: benchmark_python_20260407_084329.csv  benchmark_python_20260407_084329_env.csv  benchmark_python_20260407_091301.csv  benchmark_python_20260407_091301_env.csv  benchmark_python_20260407_091907.csv  benchmark_python_20260407_091907_env.csv
docs/: index.md
docs/en/: api-reference.md  architecture.md  development.md  getting-started.md  index.md
docs/es/: api-reference.md  architecture.md  development.md  getting-started.md  index.md
docs/pt/: api-reference.md  architecture.md  development.md  getting-started.md  index.md
en/: index.html
es/: index.html
pt/: index.html
reference/SUMMARY/: index.html
reference/climasus/: index.html
reference/climasus/core/: index.html
reference/climasus/core/aggregate/: index.html
reference/climasus/core/clean/: index.html
reference/climasus/core/engine/: index.html
reference/climasus/core/filter/: index.html
reference/climasus/core/importer/: index.html
reference/climasus/core/pipeline/: index.html
reference/climasus/core/standardize/: index.html
reference/climasus/core/variables/: index.html
reference/climasus/enrichment/: index.html
reference/climasus/enrichment/census/: index.html
reference/climasus/enrichment/climate/: index.html
reference/climasus/enrichment/fill_gaps/: index.html
reference/climasus/enrichment/spatial/: index.html
reference/climasus/io/: index.html
reference/climasus/io/cache/: index.html
reference/climasus/io/export/: index.html
reference/climasus/utils/: index.html
reference/climasus/utils/cid/: index.html
reference/climasus/utils/data/: index.html
reference/climasus/utils/encoding/: index.html
reference/climasus/utils/explore/: index.html
reference/climasus/utils/quality/: index.html
search/: search_index.json
src/climasus/: __init__.py  _version.py
src/climasus/core/: __init__.py  aggregate.py  clean.py  engine.py  filter.py  importer.py  pipeline.py  standardize.py  variables.py
src/climasus/enrichment/: __init__.py  census.py  climate.py  fill_gaps.py  spatial.py
src/climasus/io/: __init__.py  cache.py  export.py
src/climasus/utils/: __init__.py  cid.py  data.py  encoding.py  explore.py  quality.py
stylesheets/: climasus-extras.css
tests/: test_aggregate.py  test_cache.py  test_clean.py  test_conversions.py  test_data_utils.py  test_explore.py  test_export.py  test_fill_gaps.py  test_filter.py  test_metadata_external.py  test_pipeline_e2e.py  test_quality.py  test_utils.py  test_variables.py
