[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climasus4py"
version = "0.1.0"
description = "Fast SUS and climate data workflows for Brazil — Python edition"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ClimaSUS Team", email = "maxanjos@campus.ul.pt" },
]
maintainers = [
    { name = "Max Anjos", email = "maxanjos@campus.ul.pt" },
]
keywords = ["datasus", "sus", "climate", "health", "brazil", "epidemiology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "climasus-data>=0.1.0",
    "climasus_readdbc_py>=0.1.0",
    "duckdb>=1.0",
    "pyarrow>=12.0",
    "pandas>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
metadata = []  # climasus-data deve ser clonado manualmente ao lado do projeto
datasus = ["pysus>=1.0"]
spatial = ["geopandas>=0.14", "geobr>=0.3"]
ml = ["xgboost>=2.0", "scikit-learn>=1.3"]
excel = ["openpyxl>=3.1"]
all = ["climasus4py[datasus,spatial,ml,excel]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/ClimaHealth/climasus4py"
Repository = "https://github.com/ClimaHealth/climasus4py"
Issues = "https://github.com/ClimaHealth/climasus4py/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/climasus"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
